Jun25/k8s/ingress/preschool.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: preschool
spec:
  selector:
    app: preschool
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preschool-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: preschool
  template:
    metadata:
      labels:
        app: preschool
    spec:
      containers:
      - name: preschool
        image: shaikkhajaibrahim/preschool:1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
