Jun25/k8s/ingress/skate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skate
spec:
  selector:
    app: skate
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skate-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skate
  template:
    metadata:
      labels:
        app: skate
    spec:
      containers:
      - name: skate
        image: shaikkhajaibrahim/skateboard:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
